WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303764
REGRESSION (
303307@main
): Recovery browser crashes on launch
https://bugs.webkit.org/show_bug.cgi?id=303764
Summary
REGRESSION (303307@main): Recovery browser crashes on launch
Wenson Hsieh
Reported
2025-12-08 10:13:14 PST
rdar://166061104
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-12-08 10:16:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55045
EWS
Comment 2
2025-12-08 11:03:51 PST
Committed
304104@main
(61c55b0771f2): <
https://commits.webkit.org/304104@main
> Reviewed commits have been landed. Closing PR #55045 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug