REGRESSION (303307@main): Recovery browser crashes on launch https://bugs.webkit.org/show_bug.cgi?id=303764 rdar://166061104

Reviewed by Pascoe and Abrar Rahman Protyasha.

Make these SOFT_LINK_CLASS macros optional, to avoid crashing in the case where the
SafariSafeBrowsing framework is missing (i.e. on the base system).

* Source/WebKit/UIProcess/Cocoa/SafeBrowsingUtilities.mm:

Canonical link: https://commits.webkit.org/304104@main